# lobster

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_flags.txt  limitorderbook.cpp  limitorderbook.h  main.cpp
include/: LevelInfo.hpp  Order.hpp  OrderModify.hpp  OrderType.hpp  Orderbook.hpp  OrderbookLevelInfos.hpp  Trade.hpp  TradeInfo.hpp  limitorderbook.h  limitorderbook.hpp  orderbook.hpp
src/: Orderbook.cpp  limitorderbook.cpp  main.cpp  orderbook.cpp
